# babybot

./: AGENTS.md  README.md  commits.md  config.json.example  conftest.py  evermemos_full.md  evermemos_src_structure.md  pyproject.toml  scheduled_tasks.json.example
.claude/: settings.local.json
babybot/: __init__.py  cli.py  config.py  context.py  context_views.py  cron.py  execution_outcome.py  execution_plan.py  feedback_events.py  heartbeat.py  mcp_runtime.py  memory_models.py  memory_store.py  message_bus.py  model_gateway.py  orchestration_policy.py  orchestration_policy_store.py  orchestration_policy_types.py  orchestration_router.py  orchestration_routing_result.py  orchestrator.py  orchestrator_command_dispatch.py  orchestrator_handoff.py  orchestrator_inspect.py  orchestrator_interactive_support.py  orchestrator_policy_engine.py  orchestrator_prompts.py  orchestrator_routing_cascade.py  orchestrator_runtime_support.py  policy_store_utils.py  resource.py  resource_admin.py  resource_callable_tool.py  resource_mcp.py  resource_models.py  resource_path_utils.py  resource_protocols.py  resource_python_runner.py  resource_scope.py  resource_skill_loader.py  (+12 more)
docs/: code-review-2026-04-01.md
tests/: test_agent_kernel.py  test_agent_kernel_context.py  test_agent_kernel_contract_exports.py  test_agent_kernel_executor.py  test_agent_kernel_mcp.py  test_agent_kernel_skills.py  test_agent_profile.py  test_agent_runtime_docs.py  test_agent_team.py  test_auto_skill_creator_scripts.py  test_builtin_tools.py  test_builtin_tools_web.py  test_channel_manager_timeout.py  (+49 more)
(+113 files in other folders)
