[project]
name = "babybot"
version = "0.1.0"
description = "A production-ready conversational agent built with agentscope"
requires-python = ">=3.10"
dependencies = [
    "agentscope>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
babybot = "babybot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["babybot"]
