[project]
name = "babybot"
version = "0.1.0"
description = "A lightweight production-ready conversational agent runtime"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "croniter>=1.0",
    "mcp>=1.0.0",
]

[project.scripts]
babybot = "babybot:main"
gateway = "babybot:gateway"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["babybot"]
